--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,6 +57,26 @@ jobs:
           uv pip install --system -r pyproject.toml
           uv pip install --system pytest pytest-asyncio
 
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for PostgreSQL..."
+            sleep 2
+          done
+          echo "PostgreSQL is ready!"
+
+      - name: Set up test database
+        working-directory: ./backend
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
+          POSTGRES_DB: study_space_test
+        run: |
+          echo "Setting up test database..."
+          python scripts/setup_test_db.py
+
       - name: Run tests
         working-directory: ./backend
         env:
@@ -190,7 +210,20 @@ jobs:
 
       - name: Wait for services to be healthy
         run: |
-          timeout 120 bash -c 'until docker-compose ps | grep -q "healthy"; do sleep 2; done'
+          echo "Waiting for services to start..."
+          sleep 30
+          docker-compose ps
+
+          echo "Waiting for database to be ready..."
+          timeout 60 bash -c 'until docker-compose exec -T db pg_isready -U postgres; do sleep 2; done'
+
+          echo "Waiting for backend to be healthy..."
+          timeout 60 bash -c 'until curl -f http://localhost:8000/health; do sleep 2; done'
+
+          echo "All services are ready!"
+
+      - name: Run database migrations
+        run: docker-compose exec -T backend alembic upgrade head
 
       - name: Check backend health
         run: |
